--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	background-color: black
+	background-color: black;
+	text-align: center;
 }
 
 canvas {
 	height: 80vh;
 	width: 100vw;
+}
+
+button {
+
 }
