--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 html, body {
 	margin: 0;
-	padding: 0;
+	padding: 10px;
 	background-color: black;
 	text-align: center;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 canvas {
@@ -11,5 +12,53 @@ canvas {
 }
 
 button {
+	background-color: cyan;
+	color: black;
+	border-radius: 25px;
+	padding: 12px 15px;
+	border: 0px;
+	box-shadow: inset 0px 0px 12px 2px rgba( 0, 0, 0, 0.25 );
+	text-transform: uppercase;
+	font-size: 1em;
+	-webkit-appearance: none;
+}
 
+button:hover {
+	cursor: pointer;
+}
+button:focus {
+	outline: none;
+}
+
+div.parameter {
+	display: inline-block;
+	text-align: center;
+	margin: 0 5px;
+}
+
+div.parameter select, div.parameter input {
+	display: block;
+	margin: 3px auto;
+	text-align: center;
+	text-align-last: center;
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	font-size: 1.25em;
+	font-weight: lighter;
+	border: 0px;
+	border-radius: 0px;
+	padding: 3px;
+	background-color: rgb( 30, 30, 30 );
+	color: white;
+}
+
+option {
+	text-align: center;
+	font-weight: lighter;
+}
+
+div.parameter label {
+	font-size: 0.8em;
+	color: cyan;
 }
