--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ div.parameter {
 
 div.parameter select, div.parameter input {
 	display: block;
+	min-width: 50px;
 	margin: 3px auto;
 	text-align: center;
 	text-align-last: center;
